--- a/frontend/css/common.css
+++ b/frontend/css/common.css
@@ -9,7 +9,7 @@
 :root {
   --background-color: white;
   --text-color: rgb(13, 17, 23);
-  --header-background-color: ghostwhite;
+  --header-background-color: rgb(246, 248, 250);
   --button-background-color: rgb(225, 228, 232);
   --button-hover-background-color: rgb(209, 213, 218);
   --primary-color: rgb(0, 90, 156);
@@ -19,7 +19,7 @@
 
 [data-theme="dark"] {
   --background-color: rgb(13, 17, 23);
-  --text-color: aliceblue;
+  --text-color: rgb(230, 237, 243);
   --header-background-color: rgb(22, 27, 34);
   --button-background-color: rgb(33, 38, 45);
   --button-hover-background-color: rgb(48, 54, 61);
