Finished Static search.html and fixed some things in index_data.py

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -14,7 +14,7 @@ main {
 
 .site-title {
   font-size: clamp(64px, 15vw, 160px);
-  font-weight: bolder;
+  font-weight: 900;
   margin-bottom: 32px;
   text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.1);
 }
