--- a/frontend/css/common.css
+++ b/frontend/css/common.css
@@ -131,17 +131,18 @@ body {
   display: flex;
   align-items: center;
   gap: 24px;
+  flex: 1;
 }
 
 .footer-left {
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
+  justify-content: center;
 }
 
 .footer-center {
   justify-content: center;
-  flex-grow: 1;
   text-align: center;
 }
 
